cups (1.4.4-2) UNRELEASED; urgency=medium

  * debian/local/acroread.conf, debian/local/pdftops.conf, debian/cups.install:
    Removed /etc/cups/acroread.conf and /etc/cups/pdftops.conf. These two files
    were used by the alternative pdftops filter from Helge Blischke. As we
    switched back to the original pdftops filter these files are not needed any
    more (LP: #605564).
  * debian/local/filters/cpdftocps: The PostScript level from the PPD file
    was not used, but always the default value "2" instead. This made Xerox
    color laser printers crash on some files. Thanks to Roel van Os for the
    patch (LP: #600972).

 -- Till Kamppeter <till.kamppeter@gmail.com>  Fri,  2 Jul 2010 13:34:33 +0200

cups (1.4.4-1) unstable; urgency=medium

  [ Till Kamppeter ]
  * debian/cups.init.d: When loading kernel modules for the parallel port
    load also the "parport_pc" module (LP: #369850).
  * debian/filters/pstopdf: Fixed the problem of the UseCIEColor warning of
    Ghostscript correctly. The file format converter should not do any kind
    of color correction but simply pass the colors through (LP: #578181).
  * debian/patches/cups-deviced-allow-device-ids-with-newline.dpatch: Some
    printers have broken device IDs with newline characters inside. These
    break the cups-deviced printer discovery mechanism and so the printers
    get ignored. This patch allows newline characters in device IDs
    (LP: #468701).

  [ Martin Pitt ]
  * New upstream bug fix/security release. Therefore "medium" urgency.
    - CUPS could overwrite files as root in directories owned or writable by
      non-root users. [STR #3510, CVE-2010-2431]
    - The web interface now includes additional CSRF protection.
      [STR #3498, CVE-2010-0540]
    - The texttops filter did not check the results of allocations.
      [STR #3516, CVE-2010-0542]
    - The web admin interface could disclose the contents of memory.
      [STR #3577, CVE-2010-1748]